crates/dsrs-macros/tests/ui/render_invalid_jinja.stderr
error: invalid Jinja syntax in #[render(jinja = "...")]
 --> tests/ui/render_invalid_jinja.rs:6:5
  |
6 |     #[render(jinja = "{{ this ")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
